--- a/Style/style.css
+++ b/Style/style.css
@@ -5,6 +5,9 @@ body
   
     font-family: 'Poppins', sans-serif;
     width: 1440px;
+    background-color: #f1e9e9;
+    margin: 0;
+   
     
 }
 /* header section style */
@@ -14,6 +17,7 @@ body
     justify-content: space-between;
     text-align: center;
     margin-top: 55px;
+    
     
 }
 .heading
@@ -51,3 +55,347 @@ body
     height: 20px;
     width: 20px;
 }
+
+/* Main part style */
+
+/* first section */
+
+.first
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
+   
+}
+
+.influncer
+{
+    position: relative;
+    left: 120px;
+    width: 582px;
+
+}
+.influncer h1
+{
+    color: #3A3A3A;
+    font-size: 52px;
+
+}
+.influncer p
+{
+    color: #3A3A3A;
+    font-size: 16px;
+    text-align: justify;
+}
+.camera
+{
+    background-image: url("images/background-/Circledesign.svg") repeat 0 0;
+    background-size: 250px;
+    background-repeat: no-repeat;
+    
+   
+    position: relative;
+    right: 165px;
+
+    
+}
+.camera img
+{
+    height: 414px;
+    width: 440px;
+   
+}
+.influncer button
+{
+    Width :196px;
+    Height :44px;
+    border-radius: 41px;
+    background-color: #E02C6D;
+    color: #FFFFFF;;
+}
+
+/* logo section */
+.second
+{
+    display: flex;
+    justify-content: space-between;
+    width: 1100px;
+    height: 110px;
+    margin-left: 165px;
+    margin-right: 165px;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background-color: #aaaaaa11;
+}
+.second:hover
+{
+    border: 1px solid blue;
+}
+
+/* products sections */
+
+.third
+{
+    width: 1047px;
+    height: 1662px;
+    margin-left: 196px;
+    margin-right: 197px;
+    margin-bottom: 100px;
+}
+.title
+{
+    width: 262px;
+    height: 70px;
+    margin-left: 392px;
+    margin-right: 391px;
+    margin-bottom: 10px;
+    
+}
+.title h2
+{
+    font-size: 28px;
+    
+}
+
+.collections
+{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+.collection
+{
+    display: flex;
+    flex-direction: column;
+    width: 329px;
+    height: 476px;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    margin-bottom: 30px;
+   justify-content: center;
+   align-items: center;
+}
+.image img
+{
+    width: 300px;
+    height: 256px;
+}
+.description h2
+{
+    font-weight: 500;
+    font-size: 28px;
+    margin-top: 0;
+    color: #18191F;
+    margin-bottom: 6px;
+}
+.description p{
+
+    color: #000000;
+    font-size: 24px;
+    margin-top: 0;
+    margin-bottom: 0;
+    
+}
+
+/* star stlyle open */
+.star
+{
+    width: 122px;
+    height: 32px;
+    
+}
+.fa-star
+{
+    width: 11.07px;
+    height: 10.32px;
+    font-size: 12px;
+}
+.fa-star.filled
+{
+    color: orange;
+}
+.fa-star.unfilled
+  {
+      color: #AEAEAE;
+  }
+.star span
+{
+    font-size: 14px;
+    color: Gray · 80%;
+    margin-left: 8px;
+
+}
+/* star style end */
+.info
+{
+    font-size: 14px;
+}
+/* see more */
+.see
+{
+    width: 99px;
+    height: 24px;
+    margin-top: 0px;
+    margin-left: 935px;
+   
+}
+.see p
+{
+    color: #E02C6D;
+    font-size: 16px;
+}
+
+/* technology solution */
+
+.four
+{
+    display: flex;
+    width: 1110px;
+    height: 270px;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 165px;
+    margin-left: 165px;
+    margin-bottom: 100px;
+}
+.tech_pic
+{
+    margin-right: 96px;
+}
+.tech_pic img
+{
+    width: 404px;
+    height: 257px;
+}
+.details
+{
+    width: 610px;
+    height: 215.33px;
+}
+.details h2
+{
+    color: #0A0826;
+    font-size: 38px;
+    text-align:start;
+}
+.details p
+{
+    font-size: 15px;
+    width: 501px;
+    height: 50px;
+    margin-left: 0;
+    text-align:left;
+}
+.details button
+{
+    height: 34px;
+    width: 125px;
+    background:linear-gradient(red, tomato);
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+}
+footer
+{
+    background-color: #0A0826;
+    width: 1440px;
+    height: 239px;
+}
+.last
+{
+    width: 262px;
+    height: 139px;
+    position: relative;
+    top: 50px;
+    left: 589px;
+
+}
+.last h4
+{
+    font-size: 20px;
+    color: white;
+    margin-bottom: 0;
+    width: 243px;
+    height: 36px;
+}
+.last p
+{
+    font-size: 14px;
+    color: white;
+    margin-top: 3px;
+    margin-bottom: 0;
+}
+.last p img
+{
+    height: 12px;
+    width: 12px;
+    color: white;
+}
+.Socialinks
+{
+    display: flex;
+    justify-content: space-between;
+    width: 176px;
+    height: 32px;
+    margin-top: 12px;
+    
+}
+.slink img
+{
+    Width:32px;
+    Height:32px;
+}
+
+/* responsive for mobile */
+@media only screen and (max-width:700px)
+ {
+     body
+     {
+        
+     }
+    .first
+    {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+      
+       
+    }
+    .influncer {
+        position: relative;
+        left: 0px;
+        width: 582px;
+    }
+    .third
+{
+    width: 100%;
+    height: 100%;
+    margin-left: 196px;
+    margin-right: 197px;
+    margin-bottom: 100px;
+}
+
+    .collections
+    {
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+    }
+    .four
+    {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    height: 100%;
+    }
+
+    
+}
+
